fixed empty user id problem
